# RagaSense-Data

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.vercel/: project.json
archive/: README.md  general info.md  ragasense_comprehensive_analysis.md
archive/config/: env.example  wandb_config.yaml
archive/data_versions/: corrected_cross_tradition_mappings.json  ramanarunachalam_analysis.json  ramanarunachalam_corrected.json  real_data_analysis_results.json  saraga_analysis_results.json
archive/monitoring/: check_status.py  monitor_all_night.py  monitor_nightly_processing.py  monitor_real_consumption.py
archive/old_ml_scripts/: api_raga_classifier_v1.1_stable.py  ml_train_classifier_v1.0_stable.py  test_model_neural_v1.0_dev.py
archive/old_scripts/: download_saraga_carnatic.py  resumable_zenodo_downloader.py  zenodo_api_downloader.py
archive/processing/: all_night_processing.py  consume_all_data_overnight.py  gpu_metadata_processor.py  nightly_data_processing.py
archive/root_cleanup_20250921_214514/: ARCHIVE_MANIFEST.md  analyze_matching_issues.py  classify_ragas_by_tradition.py  dataset_explorer.py  fix_comprehensive_matching.py  musical_theory_demo.py  opensearch_integration.py  quick_explorer.py  raga_unification_web.py  ragasense_perfect.py  test_comprehensive_fixes.py  test_musical_theory_matching.py  test_surati_issue.py  test_surati_unified.py  test_theory_extraction.py  unification_demo.py  unified_raga_explorer.py
archive/root_docs/: CURRENT_DATA_ANALYSIS_FOR_ML.md  DATABASE_TECHNOLOGY_COMPARISON.md  PHASE3_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  ROOT_APPLICATION_ANALYSIS.md  YOUTUBE_DATASET_ANALYSIS.md  doc_raga_statistics_corrected_v1.0_stable.md  raga-equvalance.md  (+1 more)
config/: project_config.yaml  wandb_config.yaml
database/: VERCEL_POSTGRES_SETUP.md  migrate_data.py  schema.sql  setup_schema.py
docs/: README.md
governance/: access_control.md  data_lineage.json  data_policy.md  quality_standards.md
logs/: ingestion_report_20250907_031806.json  ingestion_report_20250907_032044.json  nightly_processing_report_20250907_032848.json
ml_models/: README.md  demo_raga_detection.py  raga_detection_api.py  raga_detection_system.py  requirements.txt  train_raga_model.py
schemas/: graph-schema.cypher  mapping-schema.json  metadata-schema.json  neo4j_schema.cypher
scripts/: create_ragamalika_mapping.py
website/: .vercelignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
(+212 files in other folders)
